--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -184,8 +184,10 @@ MKは近くないと当たらない。
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK; 強昇竜: 3340 (最速だと3090)
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 中ホーン: 3240
 - {端} DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 3550
+- DI(pc), ステップ, HP-HP, DR 2HP, 強スピン, 強ホーン: 3397
 - {端} DI(pc), ステップ, HP-HP, DR 2HP, 中スピン-リンクMK, 弱ホーン, 強昇竜: 3649
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3640
+- DI(pc), ステップ, 2MP, 中スピン-リンク-MK, SA2: 4040
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 中ホーン, SA3: 5240
 
 ## DI(壁)
