--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -52,3 +52,6 @@
 シミーがあまり減らない。とはいえノーゲージで2500くらい。
 
 技が多いし、スピードで混乱させて崩すキャラなので、操作が難しい。
+
+確反やインパクト返しの火力が高くて、相手に甘えた行動を許さない。
+ただ、差し合い自体はインパクトに弱くなりがち。2MPラッシュなども見せていくとインパクトだけでは対応しづらいし、返して最大火力を出すのが大事。
