--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -20,6 +20,8 @@
 ## インパクト返し
 
 - DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 弱スピンS-LK
+- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, SA3
+- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 中昇竜, LK, MK(+1)
 
 ## 弱攻撃からの攻め
 
@@ -73,3 +75,7 @@
   - DR MK, MK
   - DR 前投げ: 少し長めに走って目押しで重ねる
 - 2MK(g), ガード
+
+## キャンセルラッシュ
+
+- 2MP, CR MK, 2HP, 強スピン, 中ホーン
