--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -16,14 +16,37 @@
 
 - 2LP, 2LP, 強昇竜: 1520
 - 2LP, 2LP, 弱スピン: 1170
-- 2LP, 2LP, 弱スピン-リンク: 960
 - {立} 2LP, 2LP, 弱ホーン: 1310
+- {立端} 2LP, 2LP, 弱ホーン, 中昇竜: 1910
+- {立} 2LP, 2LP, ODホーン, 強昇竜: 2080
+- {立端} 2LP, 2LP, 弱ホーン, OD昇竜: 2110
+- 2LP, 2LP, CR 2LP, 2HP, 強スピン, 中ホーン: 1929
+- 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン: 2000
+- {端} 2LP, 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン, 強ホーン: 2016
+- {立} 2LP, 2LP, ODホーン, OD昇竜: 2180
+- 2LP, 2LP, SA1, 強昇竜: 1852
+- {立} 2LP, 2LP, ODホーン, SA1, 強昇竜: 2380
+- {立} 2LP, 2LP, ODホーン, SA2: 2780
+- 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, ODグライド-6P, SA2: 3069
+- 2LP, 2LP, SA3: 2779
+- {立} 2LP, 2LP, 弱ホーン, SA3: 3310
+- 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4000
 
 ## 2LP(+4)
 
 - 2LP(+4), 2HP, 強ホーン: 1850
 - 2LP(+4), MK-HK, ODスピン-リンクMK, 中ホーン: 2220
 - 2LP(+4), MK-HK, ODスピン-リンクMK, SA2: 3560
+
+## 2LK
+
+- 2LK, 2LP, 強昇竜: 1420 (AC1)
+- 2LK, 2LP, 弱スピン: 1070
+- 2LK, 2LP, SA1, 強昇竜: 1752
+
+## 2LK, 2LP, CR 2LP
+
+- 2LK, 2LP, CR 2LP, 2HP, 強スピン, 中ホーン: 1829
 
 ## MP(+4)
 
@@ -32,10 +55,15 @@
 
 ## {立} MP-MP
 
+- MP-MP, 強昇竜: 2120
+- MP-MP, 弱グライド-6P: 2060
 - MP-MP, 中ホーン: 1960
 - MP-MP, 中スピン: 1800
-- MP-MP, 中スピン-リンク: 1480
-- MP-MP, 弱グライド-6P: 2060
+- MP-MP, ODホーン, 強昇竜: 2800
+- {端} MP-MP, CR MK, 2HP, 強スピン, 弱ホーン, 強昇竜: 3036
+- MP-MP, SA1, 強昇竜: 2960
+- MP-MP, ODホーン, SA1, 強昇竜: 3280
+- MP-MP, ODホーン, SA1, OD昇竜: 3340
 
 ## 2MP
 
@@ -86,6 +114,7 @@
 ## {立} 2MK-HK
 
 - 2MK-HK, 強昇竜: 1900
+- 2MK-HK, 弱グライド-6P: 1840
 - 2MK-HK, 強ホーン: 1830
 - 2MK-HK, 中スピン: 1620
 - 2MK-HK, 弱リンク-LK: 1480
@@ -127,6 +156,8 @@ MKは近くないと当たらない。
 - {端} HP-HP, ODホーン, 強昇竜: 3400
 - HP-HP, SA2: 3840
 - HP-HP, SA2(H): 3160
+- HP-HP, ODホーン, SA2: 4240
+- HP-HP, ODホーン, SA3: 4560
 
 昇竜は近くないと届かない。
 
@@ -172,6 +203,15 @@ MKは近くないと当たらない。
 - リンクS-LK, SA2: 3760
 - リンクS-LK, ODホーン, SA2: 4120
 
+## リンクS-MK
+
+- リンクS-MK, 強昇竜: 2020
+- リンクS-MK, 中ホーン: 1880
+- {端} リンクS-MK, 弱ホーン, 弱昇竜: 2310
+- リンクS-MK, SA1, 強昇竜: 2680
+- リンクS-MK, SA1, 弱ホーン: 2560
+- リンクS-MK, 中ホーン, SA3: 3880
+
 ## リンクS-HK
 
 弾抜けなどから狙う。
@@ -192,9 +232,18 @@ MKは近くないと当たらない。
 
 ## DI(壁)
 
-- DI(壁), 2MP, 中スピン-リンク-MK, 強昇竜: 3180
-- DI(壁), 2MP, 中スピン-リンク-MK, SA1, 昇竜: 3480
-- DI(壁), 2MP, 中スピン-リンク-MK, SA1, 昇竜: 3480
+- DI(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 3390
+- DI(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, OD昇竜: 3510
+- DI(壁), 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3480
+- DI(壁), 2MP, 中スピン-リンク-MK, SA2: 3880
+- DI(壁), 2MP, 中スピン-リンク-MK, ODホーン, SA2: 4000
+- DI(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, SA3: 5030
+- DI(壁), HP-HP, DR 2HP, 強スピン, 強ホーン, SA3: 5237
+
+## DI(g)(壁)
+
+- DI(g)(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 2888
+- DI(g)(壁), 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3104
 
 ## その他
 
