--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -1,5 +1,8 @@
 ## 差し合い
 
+MPも発生が早くて長い。
+相手が立っていたらMP-MP, 弱グライドまで出してヒット確認でいい。
+
 長くてTCで2000減る6HPが主力。ただ、発生前は結構判定が前に出るので注意。
 基本的には下がりながら、前に出てくる相手に6HPや2MPラッシュを狙う。
 
