--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -23,6 +23,14 @@
 - DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, SA3
 - {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 中昇竜, LK, MK(+1)
 
+## 壁インパクト
+
+（ダミー設定 > ガード: ランダム）
+
+- DI(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜
+
+ガードも同じルートでいい。
+
 ## 弱攻撃からの攻め
 
 - 2LK, 2LP, 弱スピン-リンクLK, ...
