--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -80,8 +80,12 @@
 
 スピンからもリンクに派生できる。
 
-+1があんま強くない。
++1があんま強くない。ガードのとき2LP, 2LPが届かない。
 とりあえず2LPで触って、ヒット確認で2LPスピンかLK昇竜かな。
+
+- 2LP: ヒット確認してLK, 弱ホーンだが立ちヒット確認が必要
+- 2LK, 2LP: 4F技と相打ちで五分くらい
+- 投げ: 4F技に負ける
 
 ## リンクS-HK(g): 3
 
@@ -114,6 +118,9 @@
 ## OD昇竜: 25
 
 ## 通常ホーン: 39
+
+- 弱リンク-HK(+2)
+- 弱リンクS-LK
 
 ## MK-HK, 弱ホーン: 40
 
