--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -65,7 +65,20 @@
 - MP-MP, ODホーン, SA1, 強昇竜: 3280
 - MP-MP, ODホーン, SA1, OD昇竜: 3340
 
-## 2MP
+## 2MP, ODグライド
+
+2MP単発のヒット確認は厳しいので、グライドまで入れ込んでからヒット確認して派生させる。
+入れ込んでしまうとインパクトには弱い。
+
+- 2MP, 弱グライド-6P: 1880
+- 2MP, ODグライド-6P: 2280 (AC2)
+- 2MP, ODグライド-6P, SA2: 4096 (AC2)
+- 2MP, ODグライド-6P, SA3: 4480
+
+ODグライドは安定する。
+弱グライドは2MP先端だと届かないことがある。
+
+## 2MP, CR MK
 
 - 2MP, CR MK, 2HP, 強スピン, 中ホーン: 2781
 - {端} 2MP, CR MK, 2HP, 強スピン, 弱ホーン, 強昇竜: 3089
@@ -169,13 +182,16 @@ MKは近くないと当たらない。
 - HP(pc)-HP, ODスピン-リンク-MK, 中ホーン: 3620
 - {端} HP(pc)-HP, 弱ホーン, 強昇竜: 3480
 - {端} HP(pc)-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, 強昇竜: 4133
+- HP(pc)-HP, SA1, 強昇竜: 3720
+- HP(pc)-HP, ODスピン-リンク-MK, SA1, 強昇竜: 4020
 - HP(pc)-HP, ODスピン-リンク-MK, SA1, 弱ホーン: 3960
 - {端} HP(pc)-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, SA1, 強昇竜: 4435
 - HP(pc)-HP, DR 2HP, 強スピン, SA2: 4188
-- HP(pc)-HP, ODスピン, SA2: 4240
+- HP(pc)-HP, ODスピン-リンクMK, SA2: 4420
 - {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, ODホーン, SA2: 5020
 - HP(pc)-HP, 強ホーン, SA3: 4800
 - {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, SA3: 5558
+- HP(pc)-HP, ODスピン-リンクMK, 中ホーン, SA3: 5620
 
 遠いとDR 2HPが当たりにくいので、2MPで妥協してもいい。
 
@@ -270,9 +286,6 @@ MKは近くないと当たらない。
 - リンクS-HK, 2LP, 2LP, 弱スピン
 
 MK-HK, ODホーンはすっぽ抜けるので注意。
-
-- 2MK, ODグライド-6P, SA2: 4096 (AC2)
-- 2MK, ODグライド-6P, SA3: 4480
 
 - スピン, SA3
 - ODスピン, SA2
