--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -1,10 +1,91 @@
-## ジャンプ強攻撃からのコンボと詐欺飛び
+## 弱グライドからの攻め
 
 （ダミー設定 > ガード: ランダム）
-（反撃設定 > ガードリバーサル: OD昇竜）
 
-- {端} J.HK, MK-HK, 弱グライド-6P, J.HK, ...
-- {端} J.HK(g), ガード
+- 弱グライド-6P
+  - 弱リンク-Sレオパード/Sハーベスト, ...
+  - 弱リンク-マレット(+2), 2LP, 弱スピン, ...
+  - 強リンク, 前投げ: 4F技に負ける
+  - 強リンク, 2LK, 2LP: 4F技と相打ち
+- 弱グライド(g), ガード
+
+## 差し合いの立ち確認
+
+（ダミー設定 > ガード: ランダム）
+（ダミー設定 > ガード切り替え: ランダム）
+
+- {立} 2MK-HK, 弱グライド-6P, リンク, ...
+- {立} 2MK-HK, 弱グライド(g), ガード
+- {立} MP-MP, 弱グライド-6P, リンク, ...
+- {立} MP-MP, 弱グライド(g), ガード
+- {屈} 2MK, ガード
+- {屈} MP, ガード
+
+## 差し合いのヒット確認
+
+- 6MK-MK, DR 6MK, MK-HK, ...
+- 6MK(g), ガード
+
+## 弱攻撃
+
+（ダミー設定 > ガード: ランダム）
+
+- J.MK, 2LK, 2LP, 弱スピン, SA3
+
+## Sレオパードスナップを絡めた攻め
+
+（ダミー設定 > ガード: ランダム）
+
+- Sレオパード, ODホーン
+  - 弱リンク-Sレオパード, ...
+  - 弱リンク, 後退
+- Sレオパード(g)
+  - 2LK, 2LP, 弱スピン-リンク, ...
+  - 2LK(g), 2LP, ガード
+
+## Sハーベストサークルを絡めた攻め
+
+（ダミー設定 > ガード: ランダム）
+
+- Sハーベスト, 弱ホーン
+  - 弱リンク-Sレオパード, ...
+  - 強リンク-マレット
+  - 弱リンク, 後退
+- Sハーベスト(g), ガード: -4なので注意
+
+## Sマレットスマッシュを絡めた攻め
+
+（ダミー設定 > ガード: ランダム）
+
+- Sマレット, 2LP, 2LP
+- Sマレット(g)
+  - 2LK, 2LP, ...
+  - 通常投げ
+
+## 弱攻撃の攻め
+
+- 2LK, 2LP, 弱グライド-6P, 弱リンク, ...
+- 2LK, 2LP, 弱グライド
+- 2LK, 2LP, 弱スピン-リンク
+  - 弱リンクS-LK, ODホーン
+    - 弱リンクS-LK, ...
+  - 弱リンクS-MK, 弱ホーン
+    - 弱リンクS-LK, ...
+  - 弱リンクS-HK, 2LP, 2LP, 弱スピン-リンク, ...
+- 2LK, 2LP, 弱スピン-リンクMK, 中ホーン
+- 2LK, 2LP, 弱スピン-リンクHK
+- リンクS-LK, ODホーン
+  - 弱リンクS-LK
+  - 弱リンク, 後退
+- リンクS-LK(g)
+  - 2LK, 2LP, 弱スピン-リンクLK, ...
+  - 2LK(g), 2LP, ガード
+  - 前投げ
+- リンクS-HK, 2LP, 2LP, 弱スピン
+  - ...-リンクLK
+  - ...-リンクHK
+  - ...-リンク, 前投げ
+- リンクS-HK(g), 2LK, 2LP, ...
 
 ## 確反
 
@@ -14,22 +95,47 @@
 
 端は追撃して伸ばす。
 
-- {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, 中昇竜, LK, 後退
-- {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, 中昇竜, LK, MK(+1), MK-HK, 弱グライド-6P, J.HK, ...
+- {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, 中昇竜
+  - LK, 後退
+  - LK; 前投げ: 目押しで重ねる
+  - LK, MK(+1), MK-HK, 弱グライド-6P, J.HK, MK-HK, ...
+
+## 詐欺飛びの練習
+
+（ダミー設定 > ガード: ランダム）
+（ダミー設定 > 起き上がり: ランダム）
+（反撃設定 > ガードリバーサル: 無敵技）
+（反撃設定 > ガードリバーサル: 何もしない）
+
+- J.HK, 2MP, ODグライド-6P
+  - J.HK, 2MP, ODグライド-6P, ...
+  - {端} J.HK, MK-HK, 弱グライド-6P, J.HK, ...
+  - {無敵技} J.HK, ガード, HP(pc)-HP, ...
 
 ## インパクト返し
 
-- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 弱スピンS-LK
-- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, SA3
-- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 中昇竜, LK, MK(+1)
+（ドライブインパクトへの対応練習）
+
+- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン
+  - 弱リンクS-LK
+  - 弱リンク, 後退
+- {端} DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, 中昇竜
+  - LK, 後退
+  - LK; 前投げ: 目押しで重ねる
+  - LK, MK(+1), MK-HK, 弱グライド-6P, J.HK, MK-HK, ...
 
 ## 壁インパクト
 
-（ダミー設定 > ガード: ランダム）
-
-- DI(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜
+- DI(壁), 2MP, 中スピン-リンクMK, 弱ホーン, 中昇竜, LK
+  - MK(+1)
+  - 後退
 
 ガードも同じルートでいい。
+
+## SA3
+
+- DI(pc), ステップ, 2MP, 中スピン-リンクMK, 弱ホーン, SA3
+- DI(壁), 2MP, 中スピン-リンクMK, 弱ホーン, SA3
 
 ## 弱攻撃からの攻め
 
@@ -38,16 +144,15 @@
 - 2LK, 2LP, 弱スピン-リンク, 2LK, 2LP, ...
 - 2LK(g), 2LP, ガード
 
-## Sレオパードスナップからの攻め
+## 中攻撃からの攻め
 
-- リンクS-LK, ODホーン, リンクS-LK, ...
-- リンクS-LK(g), 2LK, 2LP, ...
-- リンクS-LK(g), 2LP(c), MK-HK, ...
+- {立} 2MK-HK, 弱グライド-6P
+  - 弱リンクS-LK, ...
+  - 弱リンク, 後退
+- {立} 2MK-HK, 弱グライド(g), ガード
+- {屈} 2MK, ガード
 
-## Sマレットスマッシュからの攻め
-
-- リンクS-HK, 2LP, 2LP, 弱スピン-リンク, ...
-- リンクS-HK(g), 2LK, 2LP, ...
+- 2MK-HK
 
 ## リンクシンクを使った攻め
 
