--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -90,13 +90,26 @@ ODグライドは安定する。
 
 ## MK
 
-- MK-HK, 強ホーン
-- MK-HK, 強昇竜
-- MK-HK, 弱リンク-LK
+安いけど、MK-HKの確認より少し簡単。
+
+- MK, 2LP, 弱スピン: 1520
+
+## MK-HK
+
+- MK-HK, 強ホーン: 1940
+- MK-HK, 強昇竜: 2020
 - {端} MK-HK, 弱ホーン, 強昇竜: 2620
 - MK-HK, ODスピン-リンクMK, 中ホーン: 2760
+- MK-HK, CR HP-HP, DR 2MP, 中スピン-リンクMK, 中ホーン: 3216
+- {端} MK-HK, ODスピン-リンクMK, 弱ホーン, 強昇竜: 3130
+- MK-HK, ODスピン-リンクMK, SA1, 強昇竜: 3160
 - MK-HK, ODスピン-リンクMK, SA1, 弱ホーン: 3100
-- MK-HK, ODスピン-リンクMK, 弱ホーン, SA3: 4710 (AC3)
+- {端} MK-HK, ODスピン-リンクMK, 弱ホーン, SA1, 強昇竜: 3390
+- MK-HK, ODスピン-リンクMK, 中ホーン, SA3: 4760
+- MK-HK, CR HP-HP, DR 2MP, 中スピン-リンクMK, 中ホーン, SA3: 5216
+
+AC3はODスピンから弱ホーン。
+最大ではないが、状況がいいので弱でもいい。
 
 ## MK(+1)
 
@@ -156,8 +169,12 @@ MKは近くないと当たらない。
 ## 6MK(+4)
 
 - 6MK(+4), MK-HK, 強昇竜: 2400
+- 6MK(+4), MK-HK, 強ホーン: 2330
 - {端} 6MK(+4), MK-HK, 弱ホーン, 強昇竜: 2890
 - 6MK(+4), MK-HK, ODスピン-リンク-MK, 強昇竜: 3050
+- 6MK(+4), MK-HK, ODスピン-リンク-MK, 中ホーン: 2970
+- {端} 6MK(+4), MK-HK, ODスピン-リンク-MK, 弱ホーン, 強昇竜: 3210
+- {端} 6MK(+4), MK-HK, ODスピン-リンク-MK, 弱ホーン, SA1, 強昇竜: 3610
 - 6MK(+4), MK-HK, ODスピン-リンク-MK, 中ホーン, SA3: 4970
 
 ## HP
@@ -176,24 +193,26 @@ MKは近くないと当たらない。
 
 ## HP(pc)
 
-- HP(pc)-HP, 強ホーン: 2800
 - HP(pc)-HP, 強昇竜: 2880
-- HP(pc)-HP, DR 2HP, 強スピン, 強ホーン: 3558
-- HP(pc)-HP, ODスピン-リンク-MK, 中ホーン: 3620
+- HP(pc)-HP, 強ホーン: 2800
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 3689
 - {端} HP(pc)-HP, 弱ホーン, 強昇竜: 3480
-- {端} HP(pc)-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, 強昇竜: 4133
+- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜: 4133
 - HP(pc)-HP, SA1, 強昇竜: 3720
-- HP(pc)-HP, ODスピン-リンク-MK, SA1, 強昇竜: 4020
-- HP(pc)-HP, ODスピン-リンク-MK, SA1, 弱ホーン: 3960
-- {端} HP(pc)-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, SA1, 強昇竜: 4435
+- HP(pc)-HP, ODスピン-Sハーベスト, SA1, 強昇竜: 4020
+- HP(pc)-HP, ODスピン-Sハーベスト, SA1, 弱ホーン: 3960
+- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, SA1, 強昇竜: 4435
 - HP(pc)-HP, DR 2HP, 強スピン, SA2: 4188
 - HP(pc)-HP, ODスピン-リンクMK, SA2: 4420
-- {端} HP(pc)-HP, DR 2HP, 強スピン-リンク-MK, 弱ホーン, ODホーン, SA2: 5020
+- {端} HP(pc)-HP, DR 2HP, 強スピン-Sハーベスト, 弱ホーン, ODホーン, SA2: 5020
 - HP(pc)-HP, 強ホーン, SA3: 4800
 - {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, SA3: 5558
-- HP(pc)-HP, ODスピン-リンクMK, 中ホーン, SA3: 5620
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 5689
+- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 5825
+- {端} HP(pc)-HP, DR 2HP, 強スピン-Sハーベスト, 弱ホーン, ODホーン, SA3: 5900
 
 遠いとDR 2HPが当たりにくいので、2MPで妥協してもいい。
+中央ではDR 2MPの方が高いけど、端だと弱ホーン, 強昇竜が入らないのでDR 2HPの方が高い。
 
 ## {空} J.MP-MP
 
@@ -211,29 +230,31 @@ MKは近くないと当たらない。
 - {端} 強スピン(pc)-リンク-LK, DR 2LP, 中スピン-リンク-MK, 弱ホーン, SA3: 5843
 - {端} 強スピン(pc)-リンク-LK, DR 2LP, CR HP-HP, DR 2HP, 中スピン-リンク-MK, 中ホーン, SA3: 6313
 
-## リンクS-LK
+## Sレオパード
 
-- リンクS-LK, ODホーン: 2160
-- {端} リンクS-LK, 中昇竜: 3000
-- {端} リンクS-LK, SA1, 強昇竜: 3800
-- リンクS-LK, SA2: 3760
-- リンクS-LK, ODホーン, SA2: 4120
+- Sレオパード, ODホーン: 2160
+- {端} Sレオパード, 強昇竜: 2360
+- {端} Sレオパード, ODホーン, 強昇竜: 3140
+- {端} Sレオパード, SA1, 強昇竜: 3420
+- {端} Sレオパード, ODホーン, SA1, 強昇竜: 3800
+- Sレオパード, SA2: 3760
+- Sレオパード, ODホーン, SA2: 4120
 
-## リンクS-MK
+## Sハーベスト
 
-- リンクS-MK, 強昇竜: 2020
-- リンクS-MK, 中ホーン: 1880
-- {端} リンクS-MK, 弱ホーン, 弱昇竜: 2310
-- リンクS-MK, SA1, 強昇竜: 2680
-- リンクS-MK, SA1, 弱ホーン: 2560
-- リンクS-MK, 中ホーン, SA3: 3880
+- Sハーベスト, 強昇竜: 2020
+- Sハーベスト, 中ホーン: 1880
+- {端} Sハーベスト, 弱ホーン, 弱昇竜: 2310
+- Sハーベスト, SA1, 強昇竜: 2680
+- Sハーベスト, SA1, 弱ホーン: 2560
+- Sハーベスト, 中ホーン, SA3: 3880
 
-## リンクS-HK
+## Sマレット
 
 弾抜けなどから狙う。
 
-- リンクS-HK, 2LP, 弱スピン: 1670
-- {立} リンクS-HK, 2LP, 2LP, 弱ホーン: 1910
+- Sマレット, 2LP, 弱スピン: 1670
+- {立} Sマレット, 2LP, 2LP, 弱ホーン: 1910
 
 ## DI(pc)
 
