--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -17,8 +17,15 @@
 
 ## DR MK(g): 5
 
+2MP(g), CR MKは連続ガード。
+
 めり込むと+5の投げ間合いで後退がシミーになる。
 ただ、ガードは+5から最速で投げると空振りになるので注意。
+
+- 2LK, 2LP: 無敵技以外で割り込めない
+- MK, 2LP: 無敵技以外で割り込めない
+- 通常投げ: 最速は空振りなので1-3F遅らせる
+- 後退: シミー
 
 ## {端} 前投げ: 24
 
@@ -56,10 +63,12 @@
 
 ## スピン-リンク: -3
 
-- リンクS-LK: ヒットしたらダウン、ガードでも+1
+- リンクS-LK: ヒットしたらダウン、ガードでも+1、無敵技以外で割り込めない
+- リンクS-LK: ヒットしたら浮かしてコンボ、ガードで-4、無敵技以外で割り込めない
 - リンクS-HK: 下段や投げに勝ってパニカンしたら+8、ヒットで+4、ガードでも+3の投げ間合い
 - ガード: -3 (無敵技読み)
-  ヒットから何もしないと-3で無敵技をガードできる。
+
+ガードされても展開が早いと切り返しは難しいので、積極的にMKを使っても別にいい。
 
 ## スピン(g)-リンク: -12
 
@@ -67,6 +76,8 @@
 派生時の割り込みは、LK派生なら猶予11F、HK派生なら猶予23F。
 
 ## 弱スピン: 34
+
+基本的にリンクシンクでキャンセルして攻め継続した方が良い。ダメージも200-300くらいしか変わらない。
 
 ## 中スピン: 42
 
@@ -76,7 +87,11 @@
 
 ## 強スピン: 52
 
-端では追撃できる。
+基本的に追撃した方がいい。追撃しないと火力が落ちすぎる。
+端ではノーゲージ、中央でもDR 2MPから追撃できる。
+
+- ステップ, DR 6MK(+2)
+- ステップ, ステップ, 前進, 通常投げ
 
 ## {端} 強スピン, 強昇竜: 26
 
@@ -108,6 +123,8 @@
 
 ## 弱昇竜: 36
 
+- ステップ, DR MK
+- ステップ, DR 2MK
 - {端} 弱リンク, MK(+2), MK: 持続当て
 
 ## 中昇竜: 26
@@ -116,10 +133,12 @@
 
 - {端} LK, MK(+1): 持続当てからMKが繋がる
 
-## 強昇竜: 23
+## {端} 強昇竜: 23
 
 - {端} LK: +5
 - {端} LK, 後退: シミー
+
+中央では離れすぎて何もできない。
 
 ## {空} 弱ホーン, 強昇竜: 22
 
