--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -1,13 +1,24 @@
-## 2LK, 2LP: 2
+## 2LP, 2LP: 1
 
-下段始動。
+ガードだと2度目の2LPが届かないことも結構ある。
+Sレオパードの後とか。
 
 ## 2LP, 2LK, 2LP: 1
 
 ジャストパリィの仕様変更に合わせて、上段から入って下段で崩すコンボ。
 ガードでも無敵技以外で割り込めないし、ヒットしたらちゃんとつながる。
 
+## 2LK, 2LP: 2
+
+下段始動。
+
 ## MK: 2-8
+
+- MK, 2LP, ...: ヒット確認は簡単だけど安い、無敵技以外で割り込めない
+- MK-HK: ヒット確認は難しめ
+- MK(g), 2LP, 2LP, ...
+- MK(g), 2LK, 2LP, ...
+- MK(g), 通常投げ
 
 ヒット確認して2LPやLKに繋いだり、MK-HKのTCも何とか間に合う。
 ガードされても+1から2LP, 2LPまで入る。
@@ -15,12 +26,24 @@
 ヒット時はできればMK-HKが高いけど猶予は少ない。
 2LPやLKの方がヒット確認は簡単。
 
-## {端} MK-HK, 弱グライド
+## MK, 弱グライド: 2-8
+
+ガードされても無敵技以外で割り込めない。-3なので確反もない。
+
+MK, 2LPが届かない状況とかで入れ込み。
+
+## {端} MK-HK, 弱グライド: 2-8
 
 ガードされるとHKと弱グライドの間に4F隙がある。
 ただ、1Fでも遅れると相打ちになって2MPが入る。
 
-## 2MP, 弱グライド
+## MK(+1): 7-8
+
+MK(+1), MKが繋がるのでヒット確認しやすい。
+
+## 2MP, 弱グライド: 4-9
+
+主に密着でない場面の起き攻めや立ち回りに使う。
 
 ガードされても無敵技以外で割り込めず、-3なので確反がない。
 
@@ -32,15 +55,29 @@
 
 DR MK(+3)がヒットするとHP-HPも入る。
 
-## DR 2MK
+## DR 2MK: 16-21
 
 ガードされても五分で、ヒットすると+8になる。MKか、遠かったらMPか2MPからコンボが入る。
 
-## DR 6MK: 28-32
+4F技と相打ちの時は+11はあるので、2MPかMPでいい。
 
-中段。ガードされても+2
+## 6MK-MK: 16-20
+
+安いけど手軽な崩し。
+差し合いの中でも使える。
 
 ## 6MK(+2): 21
+
+持続当てで2LPが繋がる。
+
+## DR 6HK: 24-29
+
+単発ヒット確認でさらに起き攻めを狙う。
+ガードされて五分のMKの外。エレナの技が届くのは8Fからなのでキャラによっては微妙な距離。
+
+## DR 6MK: 28-32
+
+中段。ガードされても+2からMKで固めてもいいし、ヒットしたらMKが繋がる。
 
 ## リンクS-LK: 38-47
 
