--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -189,6 +189,12 @@
   - DR 前投げ: 少し長めに走って目押しで重ねる
 - 2MK(g), ガード
 
-## キャンセルラッシュ
+## シミー
 
-- 2MP, CR MK, 2HP, 強スピン, 中ホーン
+（ガード: ランダム）
+（ガードリバーサル: 無敵技）
+（ガードリバーサル: 通常投げ 3Fディレイ）
+
+- 2MP, CR MK, 2HP, 強スピン, 中ホーン, ...
+- 2MP(g), CR MK, 後退, {無敵技}, HP(pc)-HP, DR 2HP, 強スピン, 強ホーン
+- 2MP(g), CR MK, 後退, {通常投げ}, MP, MK-HK, ODスピン-Sハーベスト, 中ホーン, SA3
