--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -1,3 +1,26 @@
+## 弱攻撃のコンボ
+
+（ダミー設定 > ガード: ランダム）
+
+- J.MK, 2LK, 2LP, 弱スピン, SA3
+
+## ジャンプ中攻撃からのコンボ
+
+- J.MK, MK-HK, 強ホーン, ステップ, DR 2MK, MK-HK, ...
+- J.MK(g), MK, 2LP, 弱スピン-リンク, ...
+- J.MK(g), MK(g), 2LP, 2LP, 弱スピン-リンク, ...
+- J.MK(g), MK(g), 2LP(g), 2LP, ガード
+- J.MK(g), MK(g), 通常投げ
+
+めくりで狙う。
+
+## 差し合いのヒット確認
+
+- 6HP-HP-HP
+  - 弱リンク-Sレオパード
+  - 中リンク, 後退
+- 6HP(g), ガード
+
 ## 弱グライドからの攻め
 
 （ダミー設定 > ガード: ランダム）
@@ -25,12 +48,6 @@
 
 - 6MK-MK, DR 6MK, MK-HK, ...
 - 6MK(g), ガード
-
-## 弱攻撃
-
-（ダミー設定 > ガード: ランダム）
-
-- J.MK, 2LK, 2LP, 弱スピン, SA3
 
 ## Sレオパードスナップを絡めた攻め
 
@@ -162,11 +179,6 @@
 - 2LK, 2LP, 弱スピン-リンク
   - リンクS-LK(g), 2LK, 2LP, ...
 - 2LK(g), 2LP, ガード
-
-## 6HPのヒット確認
-
-- 6HP-HP-HP, リンクS-LK, ...
-- 6HP(g), ガード
 
 ## 中段からの崩し
 
