--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -154,6 +154,7 @@ AC3はODスピンから弱ホーン。
 
 - 2MK(+2), MK-HK, 強昇竜: 2120
 - 2MK(+2), MK-HK, 強ホーン: 2060
+- {端} 2MK(+2), MK-HK, 弱ホーン, 強昇竜: 2500
 - 2MK(+2), MK-HK, ODホーン, 強昇竜: 2320
 
 MKは近くないと当たらない。
