--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -7,3 +7,7 @@
 
 スピードで誤魔化してるけど確反になる技が実は多い。
 しっかり見極めて確反を入れるのが大事。確反になってなくても-4にヒット確認できる7-8F技で暴れるのもいい。
+
+### 確反
+
+スピンサイスは2,2で攻撃する2周目はしゃがみに当たらなくて、強派生が下段無敵なので、発生9F以内のしゃがみの上段技で確反を入れるといい。
