--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -1,3 +1,21 @@
+## ラッシュ中下段からのコンボ
+
+（ダミー設定 > ガード: ランダム）
+（ダミー設定 > 起き上がり: 後方受け身）
+
+- DR 6MK/2MK, MK-HK, 強ホーン
+  - ステップ, DR 2MK, ...
+  - ステップ, 6MK
+  - ステップ, 前進, ガード
+- {端} DR 6MK/2MK, MK-HK, 弱ホーン, 強昇竜
+  - LK, 前投げ
+  - LK, 後退
+
+## 差し合いのヒット確認
+
+- 6HP-HP-HP, ステップ, DR 2MK
+- 6HP(g), ガード
+
 ## 弱攻撃のコンボ
 
 （ダミー設定 > ガード: ランダム）
@@ -13,13 +31,6 @@
 - J.MK(g), MK(g), 通常投げ
 
 めくりで狙う。
-
-## 差し合いのヒット確認
-
-- 6HP-HP-HP
-  - 弱リンク-Sレオパード
-  - 中リンク, 後退
-- 6HP(g), ガード
 
 ## 弱グライドからの攻め
 
