--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -117,6 +117,15 @@ AC3はODスピンから弱ホーン。
 
 - {端} MK(+1), MK-HK, 弱ホーン, 強昇竜: 2790
 
+## MK(+3)
+
+- MK(+3), 2MP, 中スピン: 1900
+- MK(+3), 2MP, 弱グライド-6P
+- MK(+3), 2MP, ODグライド-6P: 2510
+- MK(+3), 2MP, ODグライド-6P, SA2: 4046
+
+MK(+4), 2MPならガードでも無敵技以外で割り込めないし、MK先端でも繋がるので遠めの起き攻めでたまに使う。
+
 ## MK(+4)
 
 - MK(+4), 2HP, 強スピン, 中ホーン: 2980
@@ -235,11 +244,13 @@ MKは近くないと当たらない。
 
 - Sレオパード, ODホーン: 2160
 - {端} Sレオパード, 強昇竜: 2360
-- {端} Sレオパード, ODホーン, 強昇竜: 3140
+- {端} Sレオパード, ODホーン, 強昇竜: 3000
 - {端} Sレオパード, SA1, 強昇竜: 3420
 - {端} Sレオパード, ODホーン, SA1, 強昇竜: 3800
+- {端} Sレオパード, ODホーン, SA1, OD昇竜: 3880
 - Sレオパード, SA2: 3760
 - Sレオパード, ODホーン, SA2: 4120
+- Sレオパード, SA3: 4560
 
 ## Sハーベスト
 
@@ -248,7 +259,15 @@ MKは近くないと当たらない。
 - {端} Sハーベスト, 弱ホーン, 弱昇竜: 2310
 - Sハーベスト, SA1, 強昇竜: 2680
 - Sハーベスト, SA1, 弱ホーン: 2560
+- Sハーベスト, SA2: 3000
 - Sハーベスト, 中ホーン, SA3: 3880
+
+## ハーベスト
+
+- ハーベスト, 強昇竜: 1700
+- {端} ハーベスト, ODホーン, 強昇竜: 2260
+- ハーベスト, ODホーン, SA2: 2960
+- ハーベスト, ODホーン, SA3: 3560
 
 ## Sマレット
 
@@ -256,6 +275,8 @@ MKは近くないと当たらない。
 
 - Sマレット, 2LP, 弱スピン: 1670
 - {立} Sマレット, 2LP, 2LP, 弱ホーン: 1910
+
+## Sマレット(c)
 
 ## DI(pc)
 
@@ -271,16 +292,18 @@ MKは近くないと当たらない。
 ## DI(壁)
 
 - DI(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 3390
+- DI(壁), HP-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, 強昇竜: 3489
 - DI(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, OD昇竜: 3510
 - DI(壁), 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3480
 - DI(壁), 2MP, 中スピン-リンク-MK, SA2: 3880
 - DI(壁), 2MP, 中スピン-リンク-MK, ODホーン, SA2: 4000
 - DI(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, SA3: 5030
-- DI(壁), HP-HP, DR 2HP, 強スピン, 強ホーン, SA3: 5237
+- DI(壁), HP-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, 強昇竜: 3489
 
 ## DI(g)(壁)
 
 - DI(g)(壁), 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 2888
+- DI(g)(壁), HP-HP, DR 2HP, 中スピン-リンク-MK, 弱ホーン, 強昇竜: 3168
 - DI(g)(壁), 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3104
 
 ## その他
