--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -12,6 +12,15 @@
 - DR 2MK: 目押し
 - DR 投げ: 目押し
 
+## {DI(pc), ステップ, HP-HP}/{HP(pc)-HP}, DR 2HP, 強スピン, 強ホーン: 37
+
+- ステップ, DR MK(+1), 2MP: ガードされても+6なので2MPまで割り込めない
+- ステップ, DR 2MK, MK: 端が近いので必ずホーン昇竜になる
+- ステップ, DR MP, MK
+- ステップ, 前進, 6HP: 最速でも6F遅れ
+
+端では中昇竜追撃からの攻めでいい。
+
 ## 6HP-HP-HP: 40
 
 - {端} ステップ, LK: +5
@@ -39,9 +48,13 @@
 
 中央では後方受け身に何もできない。
 
-- {端} 弱リンクLK: ガードされて-3
-- {端} DR HP
-- {端} DR 前投げ: 少し長めに走らないと届かない
+- DR 2LK, ガード: 投げ間合いの外で-2 (2LPだとMP(pc), MKが届かない)
+- DR HP(+2): ヒットで+8、ガードで+4
+- DR 前投げ: 少し長めに走らないと届かない
+- DI: 無敵技やインパクト以外で割り込めない
+- DR 2LK: 目押しで重ねる
+- DR 2MK: 目押しで重ねる
+- DR 6MK: 7F遅れ
 
 柔道は少し長めに走らないと届かないし、それもフレームがギリギリなので難しい。できなくはない。
 
@@ -78,20 +91,34 @@
 
 ガードされても展開が早いと切り返しは難しいので、積極的にMKを使っても別にいい。
 
-## スピン(g)-リンク: -12
-
-ガードされて-12だが、スピンを出し切ると無敵技以外で割り込めない。
-派生時の割り込みは、LK派生なら猶予11F、HK派生なら猶予23F。
-
 ## 弱スピン: 34
 
-基本的にリンクシンクでキャンセルして攻め継続した方が良い。ダメージも200-300くらいしか変わらない。
+リンクシンクでキャンセルして攻め継続した方が良い。ダメージも200-300くらいしか変わらない。
+
+リンクシンクが出なかったらとりあえずステップしてDR MKとかで触るか、諦める。
 
 ## 中スピン: 42
 
-端のODグライド-6Pと同じ。
+端はODグライド-6Pと同じ。
 
 中スピンが直接当たるのは2MK-HKかMP-MPで、いずれも立ち限定なので確認が難しい。
+
+中央でもSレオパードやSハーベストが重なる。
+
+- 中リンク-Sハーベスト: ガードされて-4だが後方受け身ならかなり遠い
+- 弱リンク-Sマレット: 後方受け身からコパン暴れなどに差し返し気味に当たる
+- 強リンク, 後退: 差し合いに戻る、その場受け身にはシミー
+- {その場受け身} 強リンク, 通常投げ
+
+## MK-HK, 中スピン: 43
+
+後方受け身でも通常の中スピンより近い。
+
+- 強リンク: +5
+  - 2MP, 弱グライド
+  - 2MK: 4F技と相打ちになるが、一部キャラには相打ちから2MPが入る
+- 弱リンク-Sレオパード
+- 弱リンク-Sハーベスト:
 
 ## 強スピン: 52
 
@@ -109,7 +136,19 @@
 
 ## {端} 強スピン, SA1: 47
 
-## リンクS-LK(g): 1
+## Sレオパード: 48
+
+追撃をミスったり、中央でODホーンのゲージを温存したりするならこっち。
+
+- ステップ 2回, MK(+2)
+- 弱リンク-Sマレット: 中段、発生8Fまで割り込める
+- 強リンク, 2MK(+2): 下段、単発立ち確認が必要
+
+## Sレオパード, ODホーン: 39
+
+持続マレットが届かないので、弱リンク-Sレオパードで触るくらい。一応、強リンク-マレットなら触れるけど+2だからカウンター以外は安い。
+
+## Sレオパード(g): 1
 
 スピンからもリンクに派生できる。
 
@@ -120,7 +159,12 @@
 - 2LK, 2LP: 4F技と相打ちで五分くらい
 - 投げ: 4F技に負ける
 
-## リンクS-HK(g): 3
+## Sマレット: 4
+
+Sマレット(g)と基本的に同じでいい。
+当たっていても+4しかないので、通常投げで補正切りにいったり、MKから攻め継続したり。
+
+## Sマレット(g): 3
 
 スピンからもリンクに派生できる。
 
@@ -135,15 +179,26 @@
 - ステップ, DR 2MK
 - {端} 弱リンク, MK(+2), MK: 持続当て
 
-## 中昇竜: 26
+## 中昇竜: 25-26
 
-## {端} 通常ホーン, 中昇竜: 25
+- 中昇竜
+- {端} ホーン, 中昇竜
 
+など。
+
+- DR 2MK: 長めに走って目押し
 - {端} LK, MK(+1): 持続当てからMKが繋がる
+- {端} LK, 後退: シミー
+- {端} DI: 無敵技やインパクト以外で割り込めない
 
-## {端} 強昇竜: 23
+## {端} 強昇竜: 22-23
 
-- {端} LK: +5
+- 強昇竜
+- {端} 弱ホーン, 強昇竜
+
+など。
+
+- {端} LK, 前投げ
 - {端} LK, 後退: シミー
 
 中央では離れすぎて何もできない。
