--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -37,6 +37,8 @@ MK, 2LPが届かない状況とかで入れ込み。
 ガードされるとHKと弱グライドの間に4F隙がある。
 ただ、1Fでも遅れると相打ちになって2MPが入る。
 
+端でMK, 2LPのヒット確認ができない時に便利。
+
 ## MK(+1): 7-8
 
 MK(+1), MKが繋がるのでヒット確認しやすい。
@@ -79,9 +81,18 @@ DR MK(+3)がヒットするとHP-HPも入る。
 
 中段。ガードされても+2からMKで固めてもいいし、ヒットしたらMKが繋がる。
 
-## リンクS-LK: 38-47
+## Sレオパード: 38-44, 40-46, 41-47
 
-44Fまでは弱、それ以上は強でいい。
+リンクシンクの強弱で発生が変わるが、当たったら同じ。
+
+## Sハーベスト: 38-43, 40-45, 41-46
+
+リンクシンクの強弱で発生が変わるが、当たったら同じ。
+
+相手が後方受け身するとガードされても確反が届かなくなりやすい。
+逆に、その場受け身してくるなら転がって通常技が強くなる。
+
+48-52Fも2段目のみヒットになるけど安いのであまり使いたくない。
 
 ## リンク-HK(+2): 39, 41, 42
 
