--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -1,3 +1,30 @@
+## 弱攻撃のコンボ
+
+（ダミー設定 > ガード: ランダム）
+（反撃設定 > ガードリバーサル: 通常投げ 3Fディレイ）
+（反撃設定 > ガードリバーサル: 何もしない）
+
+- 2LP/2LK, 2LP, 弱スピン-リンク
+  - Sマレット, 2LP/2LK, 2LP, 弱スピン-リンク, ...
+  - Sマレット(g), 前投げ
+  - Sマレット(g), 後退, {通常投げ}, MP
+- 2LP/2LK(g), 2LP, ガード
+
+## Sレオパードスナップを絡めた攻め
+
+（ダミー設定 > ガード: ランダム）
+
+- Sレオパード, ODホーン
+  - 弱リンク-Sレオパード, ...
+  - 弱リンク, 後退
+- {端} Sレオパード, ODホーン, 中昇竜
+  - LK, MK(+2), MK
+  - LK; 前投げ
+  - LK, 後退
+- Sレオパード(g)
+  - 2LP, 2LP, 弱スピン-リンク, ...
+  - 前投げ
+
 ## ラッシュ中下段からのコンボ
 
 （ダミー設定 > ガード: ランダム）
@@ -13,7 +40,8 @@
 
 ## 差し合いのヒット確認
 
-- 6HP-HP-HP, ステップ, DR 2MK
+- 6HP-HP-HP, 弱リンク
+  - ステップ, DR 2MK, ...
 - 6HP(g), ガード
 
 ## 弱攻撃のコンボ
@@ -60,17 +88,6 @@
 - 6MK-MK, DR 6MK, MK-HK, ...
 - 6MK(g), ガード
 
-## Sレオパードスナップを絡めた攻め
-
-（ダミー設定 > ガード: ランダム）
-
-- Sレオパード, ODホーン
-  - 弱リンク-Sレオパード, ...
-  - 弱リンク, 後退
-- Sレオパード(g)
-  - 2LK, 2LP, 弱スピン-リンク, ...
-  - 2LK(g), 2LP, ガード
-
 ## Sハーベストサークルを絡めた攻め
 
 （ダミー設定 > ガード: ランダム）
@@ -80,15 +97,6 @@
   - 強リンク-マレット
   - 弱リンク, 後退
 - Sハーベスト(g), ガード: -4なので注意
-
-## Sマレットスマッシュを絡めた攻め
-
-（ダミー設定 > ガード: ランダム）
-
-- Sマレット, 2LP, 2LP
-- Sマレット(g)
-  - 2LK, 2LP, ...
-  - 通常投げ
 
 ## 弱攻撃の攻め
 
@@ -119,14 +127,9 @@
 
 （確定反撃の練習）
 
-- HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, 弱リンク, 後退
-
-端は追撃して伸ばす。
-
-- {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, 中昇竜
-  - LK, 後退
-  - LK; 前投げ: 目押しで重ねる
-  - LK, MK(+1), MK-HK, 弱グライド-6P, J.HK, MK-HK, ...
+1. HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, ステップ, 前歩き, ガード
+2. {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, 中昇竜, LK, 後退
+3. {端} HP(pc)-HP, 弱ホーン, 強昇竜, LK, 前投げ
 
 ## 詐欺飛びの練習
 
@@ -139,6 +142,7 @@
   - J.HK, 2MP, ODグライド-6P, ...
   - {端} J.HK, MK-HK, 弱グライド-6P, J.HK, ...
   - {無敵技} J.HK, ガード, HP(pc)-HP, ...
+- {端} J.HK, MK-HK, 弱グライド-6P, J.HK, ...
 
 ## インパクト返し
 
