--- a/games/Street-Fighter/Six/theory/攻めと守りの関係.md
+++ b/games/Street-Fighter/Six/theory/攻めと守りの関係.md
@@ -4,6 +4,9 @@
 
 ガードに投げ、ジャンプやバクステに打撃、無敵技や遅らせ投げ抜けにシミー、の３すくみになっている。
 
+攻める側はまず打撃と投げが基本なので、守る側は相手がシミーできない状況ならガードと無敵技や遅らせ投げ抜けが基本。
+ただ、シミーができる場面では無敵技や投げ抜けのリスクが高くて、投げをジャンプで抜けることも考えた方がいい。
+
 ## 守りの基本
 
 1. ガードして割り込み
