--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -144,6 +144,8 @@
 - 弱リンク-Sマレット: 中段、発生8Fまで割り込める
 - 強リンク, 2MK(+2): 下段、単発立ち確認が必要
 
+逆に有利が長すぎるし遠いので起き攻めが難しい。強リンク, 2MKが届くので、中下段がいいかも。単発ヒット確認が難しい。
+
 ## Sレオパード, ODホーン: 39
 
 持続マレットが届かないので、弱リンク-Sレオパードで触るくらい。一応、強リンク-マレットなら触れるけど+2だからカウンター以外は安い。
