--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -59,6 +59,7 @@
 - MP-MP, 弱グライド-6P: 2060
 - MP-MP, 中ホーン: 1960
 - MP-MP, 中スピン: 1800
+- {端} MP-MP, 中ホーン, 中昇竜: 2680
 - MP-MP, ODホーン, 強昇竜: 2800
 - {端} MP-MP, CR MK, 2HP, 強スピン, 弱ホーン, 強昇竜: 3036
 - MP-MP, SA1, 強昇竜: 2960
