--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -11,3 +11,7 @@
 ### 確反
 
 スピンサイスは2,2で攻撃する2周目はしゃがみに当たらなくて、強派生が下段無敵なので、発生9F以内のしゃがみの上段技で確反を入れるといい。
+
+### 受け身ポイント
+
+6HP-HP-HPはその場受け身すると投げとシミーの択があるので絶対に後方受け身を取らないといけない。
