--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -81,23 +81,29 @@ DR MK(+3)がヒットするとHP-HPも入る。
 
 中段。ガードされても+2からMKで固めてもいいし、ヒットしたらMKが繋がる。
 
-## Sレオパード: 38-44, 40-46, 41-47
+## Sレオパード: 38-44, 40-46, 41-47, 22-28
 
 リンクシンクの強弱で発生が変わるが、当たったら同じ。
 
-## Sハーベスト: 38-43, 40-45, 41-46
+## Sハーベスト: 38-43, 40-45, 41-46, 22-27
 
-リンクシンクの強弱で発生が変わるが、当たったら同じ。
+リンクシンクの強弱で発生が変わる。当たったら同じ。
 
 相手が後方受け身するとガードされても確反が届かなくなりやすい。
 逆に、その場受け身してくるなら転がって通常技が強くなる。
 
 48-52Fも2段目のみヒットになるけど安いのであまり使いたくない。
 
-## リンク-HK(+2): 39, 41, 42
+## マレット(+2): 39, 41, 42
 
 強弱でタイミングを変えて持続当てできる。
 ただ、ヒットストップが短くてヒット確認するのが難しい。
+
+## Sマレット: 53-56, 55-58, 56-59, 37-40
+
+リンクシンクの強弱で発生が変わる。当たったら同じ。
+
+ガードされても投げ間合いで+3になって、しかも後退がシミーになる。
 
 ## 詐欺飛び: 42
 
