--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -1,3 +1,29 @@
+## 差し合いのヒット確認
+
+（ダミー設定 > ガード: ランダム）
+（ダミー設定 > 起き上がり: ランダム）
+
+- 6HP-HP-HP
+  - 強リンク, {その場受け身/端}, 前投げ
+  - 中リンク, ガード
+- 6HP(g), ガード
+
+端まで中リンクで届くなら中リンクの方がいい。強は+2なのでバクステコパンが確定。
+
+## 端の詐欺飛び
+
+（ダミー設定 > ガード: ランダム）
+（反撃設定 > ダウンリバーサル: 無敵技）
+（反撃設定 > ダウンリバーサル: 何もしない）
+
+- {端} J.HK, MK-HK, 弱グライド-6P, J.HK, ...
+- {端} J.HK(g), MK-HK, 弱グライド-6P, J.HK, ...
+- {端} J.HK(g), MK-HK(g), 弱グライド, ガード
+- {端} J.HK, ガード, {無敵技}, (確反)
+
+弱グライド単発ヒット確認もできるので、できるなら頑張る。
+MK-HK(g), 弱グライドは4F技で割り込まれるので、ガードされた時はできればMK, 弱グライドにすると割り込まれない。
+
 ## 弱攻撃のコンボ
 
 （ダミー設定 > ガード: ランダム）
@@ -49,16 +75,6 @@
 （ダミー設定 > ガード: ランダム）
 
 - J.MK, 2LK, 2LP, 弱スピン, SA3
-
-## ジャンプ中攻撃からのコンボ
-
-- J.MK, MK-HK, 強ホーン, ステップ, DR 2MK, MK-HK, ...
-- J.MK(g), MK, 2LP, 弱スピン-リンク, ...
-- J.MK(g), MK(g), 2LP, 2LP, 弱スピン-リンク, ...
-- J.MK(g), MK(g), 2LP(g), 2LP, ガード
-- J.MK(g), MK(g), 通常投げ
-
-めくりで狙う。
 
 ## 弱グライドからの攻め
 
@@ -225,3 +241,15 @@
 - 2MP, CR MK, 2HP, 強スピン, 中ホーン, ...
 - 2MP(g), CR MK, 後退, {無敵技}, HP(pc)-HP, DR 2HP, 強スピン, 強ホーン
 - 2MP(g), CR MK, 後退, {通常投げ}, MP, MK-HK, ODスピン-Sハーベスト, 中ホーン, SA3
+
+## ジャンプ攻撃からのコンボ
+
+- J.MK/J.HK, 2MP, ODグライド-6P, J.HK, ...
+- {端} J.MK/J.HK, MK-HK, 弱グライド-6P, J.HK, ...
+- J.MK, MK-HK, 強ホーン, ステップ, DR 2MK, MK-HK, ...
+- J.MK(g), MK, 2LP, 弱スピン-リンク, ...
+- J.MK(g), MK(g), 2LP, 2LP, 弱スピン-リンク, ...
+- J.MK(g), MK(g), 2LP(g), 2LP, ガード
+- J.MK(g), MK(g), 通常投げ
+
+めくりで狙う。
