--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -63,3 +63,5 @@
 
 確反やインパクト返しの火力が高くて、相手に甘えた行動を許さない。
 ただ、差し合い自体はインパクトに弱くなりがち。2MPラッシュなども見せていくとインパクトだけでは対応しづらいし、返して最大火力を出すのが大事。
+
+24戦でマスター行けた。マジでスピンからのマレットと前強に対応できてる人が少ない。
