--- a/games/Street-Fighter/Six/characters/Guile/ガイルの対策.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの対策.md
@@ -1,35 +1,38 @@
 ## 差し合い
 
-まずは弾をガードしながら前に歩いて、遅い弾を見てからジャンプ攻撃できる中距離まで詰めるのが一番重要。
+方針として、弱ソニック、弱クロスを撃たせないのが重要。
+ガイルの攻めは遅い飛び道具から始まる。弾を盾に前進させなければそのうち端に追い詰められる。
+
+まずは弾をガードしながら前に歩いて、遅い弾を見てからジャンプ攻撃できる中距離まで詰めるのが一番重要。ここでできるだけ被弾しないこと。
 ただ、そこから安易に跳んでしまうとサマソで落とされる。立ったのを見てから跳ぶか、ブレイドに大足で差し返す。
 
-ガイルはラッシュ投げが多いので、パリィは控えめにする。
+### 飛び道具に対処する
 
-ガイルにインパクトはだいたい間に合わないのでリスクが高すぎる。ジャンプした方がマシ。
+ラッシュ投げが多いので、パリィしない。
+ゲージは削られるけど、無理に撃ってくるならジャンプしてもいい。
+
+インパクトもあまり効果的ではない。そこそこ火力が高いので危ない。ジャンプした方がマシ。
+
+弾の撃ち合いでは勝てないので、常にジャンプ攻撃できる距離を保つ。
+
+### 対空させない
+
+相手が立っていたら、下方向に強いジャンプ攻撃の早出しで通常技対空を潰すのも狙っていい。
+
+サマソは裏に抜けやすいので、めくり気味にジャンプ攻撃を狙うのも効果的。
+ガードさせて投げるか、垂直跳びで投げを潰す。
+
+ジャンプできる距離を維持して歩いたらジャンプするのが基本。
+
+ガイル戦の基本は「立ったら跳ぶ」だけど、強くなるとそれも難しくなる。
+
+## 守り
+
+ガイルは前投げパニカンから裏拳が重なってガードで3になる。
+通常はしゃがみに当たらないけど、起き上がりなら当たる種類の連携。F式と同じ。ただし、しゃがみ攻撃で返せる。ここは読み合い。
 
 ## その他
 
 ガイルは当てに行くのが強いキャラ。
 基本的に差し返しは難しいが、間合いギリギリで誘って差し返すことはある。
 まずは置きで当てを潰したいが、当ての中にはソニックブームもあるので難しい。かなり近距離でリスクのある置きをしないといけなくなる。
-
-ガイルのブレイドは発生して20Fから持続の間はソニックでキャンセルできる。キャンセルの場合は溜めがなくても出せる。
-
-ガイルのソニックとサマソはどちらも45F溜め。
-
-弾の撃ち合いでは勝てないので、常にジャンプ攻撃できる距離を保つ。
-
-相手が立っていたら、ジャンプ攻撃の早出しで対空を潰す。
-
-サマソは裏に抜けやすいので、めくり気味にジャンプ攻撃を狙うのも効果的。
-ガードさせて投げるか、垂直跳びで投げを潰す。
-
-近距離の差し合いでもソニックを撃ってくるなら、ジャストパリィで受けてタイミングをずらす。
-中足の間合いならそのまま中足で確反を狙う。
-
-ガイルは前投げパニカンから裏拳が重なってガードで3になる。
-通常はしゃがみに当たらないけど、起き上がりなら当たる種類の連携。F式と同じ。ただし、しゃがみ攻撃で返せる。ここは読み合い。
-
-ジャンプできる距離を維持して歩いたらジャンプするのが基本。
-
-ガイル戦の基本は「立ったら跳ぶ」
