--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -1,5 +1,12 @@
 ## 守り
 
+### リンクシンク対策
+
+特に注意するポイントとしては、スピンサイスからキャンセルしてくるパターン。
+特に弱はほとんどキャンセルしてくると思っていい。スピンサイスを食らったら無敵技で暴れるか、タイミングよくコパンで暴れる。最速で暴れると弱/中派生に負けるので注意。中段だけは食らわないようにする。相手が様子見する場合は-3なので、無敵技の確反が嫌なら遅らせコパンしかない。
+
+弱派生や強派生をガードするとエレナ有利なので暴れられないし、なんなら中段の方は+3から投げとシミーがあるのでそもそもガードもしてはいけない。
+
 ### 割り込みポイント
 
 ド密着じゃない+1があまり強くない。リンクS-LK(g)とか、MK(g)とか。
