--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -7,6 +7,8 @@
 
 弱派生や強派生をガードするとエレナ有利なので暴れられないし、なんなら中段の方は+3から投げとシミーがあるのでそもそもガードもしてはいけない。
 
+強派生には読み合いでリスクを取って、コンボを狙う手もある。コパンで暴れるより簡単だしこっちの方がいいかも。
+
 ### 割り込みポイント
 
 ド密着じゃない+1があまり強くない。リンクS-LK(g)とか、MK(g)とか。
