--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -1,18 +1,21 @@
 ## 差し合い
 
-MPも発生が早くて長い。
-相手が立っていたらMP-MP, 弱グライドまで出してヒット確認でいい。
+6HPがバカ。ナーフ候補。
+長くて、2000減って、相手が受け身を取れないと状況もいい。
+ただ、発生前は結構判定が前に出るので注意。
 
-長くてTCで2000減る6HPが主力。ただ、発生前は結構判定が前に出るので注意。
 基本的には下がりながら、前に出てくる相手に6HPや2MPラッシュを狙う。
 
-相手の中足の外から2MKや6MKで中下段を狙うのも強い。
-ただ、2MKは立ちヒット確認が必要。
+MPも発生が早くて長い。
+相手が立っていたらMP-MP, 弱グライドまで出してヒット確認でいい。
+ヒット確認が難しかったら単にMPで動きを止めるだけでも悪くはない。
 
-リンクシンクが弾抜けに使えるけど、見てからというよりはとりあえず転がっておく。
-たまにLKや強化HKで触るのもいい。
+リンクシンクが弾抜けに使えるけど、見てからというよりはとりあえず転がっておかないと間に合わない。普通に差し合いが強いので、無理して転がる必要もない。
 
 ## 差し合いの距離
+
+6HPがギリギリ当たる間合いでいい。
+たまに前に出てMPや中下段を狙っても構わないけど、基本的には下がる。
 
 長い技の発生が遅いので、相手の中足の距離では不利。
 2LPや2LKで暴れたり、4HKで下段を避けたりして離れるといい。
@@ -20,8 +23,9 @@ MPも発生が早くて長い。
 ## 離れたいとき
 
 とりあえず2LPや2LKで暴れるか、MKを置いてコンボ。
+2LPが長いし、弱スピンからの攻めや弱グライドでいきなり当てに行くのも強い。
 
-相手が中足を狙ってくるなら4HKも下段無敵で強い。
+相手が中足を狙ってくるなら4HKも下段無敵で強いけど、隙が大きくてジャンプにも弱いので無理して狙わなくていい。2MPラッシュでいい。
 
 ## 差し込み
 
