--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -247,39 +247,55 @@ MKは近くないと当たらない。
 
 ## Sレオパード
 
-- Sレオパード, ODホーン: 2160
-- {端} Sレオパード, 強昇竜: 2360
-- {端} Sレオパード, ODホーン, 強昇竜: 3000
-- {端} Sレオパード, SA1, 強昇竜: 3420
-- {端} Sレオパード, ODホーン, SA1, 強昇竜: 3800
-- {端} Sレオパード, ODホーン, SA1, OD昇竜: 3880
-- Sレオパード, SA2: 3760
-- Sレオパード, ODホーン, SA2: 4120
-- Sレオパード, SA3: 4560
+モダンは生のSレオパードがにモダン補正が載るので240安い。
+
+- Sレオパード, ODホーン: 2400
+- {端} Sレオパード, 強昇竜: 2600
+- {端} Sレオパード, ODホーン, 強昇竜: 3240
+- {端} Sレオパード, SA1, 強昇竜: 3660
+- {端} Sレオパード, ODホーン, SA1, 強昇竜: 4040
+- {端} Sレオパード, ODホーン, SA1, OD昇竜: 4120
+- Sレオパード, SA2: 4000
+- Sレオパード, ODホーン, SA2: 4360
+- Sレオパード, SA3: 4800
 
 ## Sハーベスト
 
-- Sハーベスト, 強昇竜: 2020
-- Sハーベスト, 中ホーン: 1880
-- {端} Sハーベスト, 弱ホーン, 弱昇竜: 2310
-- Sハーベスト, SA1, 強昇竜: 2680
-- Sハーベスト, SA1, 弱ホーン: 2560
-- Sハーベスト, SA2: 3000
-- Sハーベスト, 中ホーン, SA3: 3880
+モダンは生のSハーベストにモダン補正が乗るので260安い。
+
+- Sハーベスト, 強昇竜: 2280
+- Sハーベスト, 中ホーン: 2140
+- {端} Sハーベスト, 弱ホーン, 弱昇竜: 2370
+- Sハーベスト, SA1, 強昇竜: 2940
+- Sハーベスト, SA1, 弱ホーン: 2820
+- Sハーベスト, SA2: 3260
+- Sハーベスト, 中ホーン, SA3: 4140
 
 ## ハーベスト
 
-- ハーベスト, 強昇竜: 1700
-- {端} ハーベスト, ODホーン, 強昇竜: 2260
-- ハーベスト, ODホーン, SA2: 2960
-- ハーベスト, ODホーン, SA3: 3560
+モダンは生のハーベストにモダン補正が載るので180安い。
+
+- ハーベスト, 強昇竜: 1880
+- {端} ハーベスト, ODホーン, 強昇竜: 2440
+- ハーベスト, SA1, 強昇竜: 2540
+- ハーベスト, ODホーン, SA2: 3140
+- ハーベスト, SA3: 3700
+- ハーベスト, ODホーン, SA3: 3740
 
 ## Sマレット
 
-弾抜けなどから狙う。
+モダンは生のSマレットにモダン補正が載るので200安い。
 
-- Sマレット, 2LP, 弱スピン: 1670
-- {立} Sマレット, 2LP, 2LP, 弱ホーン: 1910
+- Sマレット, 2LP, 2LP, 弱スピン: 1990
+- {立} Sマレット, 2LP, 2LP, 弱ホーン: 2110
+- {立端} Sマレット, 2LP, 2LP, 弱ホーン, 中昇竜: 2590
+- Sマレット, 2LP, 2LP, CR 2LP, 2HP, 強スピン, 中ホーン: 2551
+- {立} Sマレット, 2LP, 2LP, ODホーン, 強昇竜: 2730
+- {立} Sマレット, 2LP, 2LP, ODホーン, SA1, 強昇竜: 2850
+- Sマレット, 2LP, 2LP, CR 2LP, 2HP, 強スピン, SA2: 3467
+- Sマレット, 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, ODグライド, SA2: 3617
+- Sマレット, 2LP, 2LP, 弱スピン, SA3: 3990
+- Sマレット, 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4553
 
 ## Sマレット(c)
 
@@ -325,16 +341,6 @@ MKは近くないと当たらない。
 - 2HP, 強スピン
 - 2HP, 強ホーン
 
-- リンク-MK, 強昇竜: 1700
-- リンク-MK, SA1: 1800
-- リンク-MK, SA3: 3520
-- リンクS-MK, 強昇竜: 2020
-- リンクS-MK, SA1: 2120
-- リンクS-MK, SA2: 3000
-- リンクS-MK, SA3: 3840
-
-- リンクS-HK, 2LP, 2LP, 弱スピン
-
 MK-HK, ODホーンはすっぽ抜けるので注意。
 
 - スピン, SA3
@@ -357,4 +363,5 @@ MK-HK, ODホーンはすっぽ抜けるので注意。
 
 - SA1, 強昇竜
 
-- 強スピン, DR 2MP, 2HP
+2HP, 強スピンから直接ホーンSA3は行けないので、DR 2MPを挟むといい。
+HP(pc)-HP, DR 2HP, 強スピンみたいに浮いているとDR 2MPでも拾えないので、そっちは中央なら2MP、端なら2HPから中スピン-Sハーベストにするといい。
