--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -48,6 +48,9 @@
 なぜかAC3が中ホーンも入るのに弱ホーン。
 中ホーンの方がダメージは高い。まぁ、弱ホーンは状況が良いので良し悪し。
 
+生のリンクシンク派生にモダン補正が載ってしまう。
+スピンからのキャンセルリンクには載らない。
+
 ## モダンにない技
 
 - LP
