--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -10,6 +10,18 @@
 
 端まで中リンクで届くなら中リンクの方がいい。強は+2なのでバクステコパンが確定。
 
+## 弱攻撃のコンボ
+
+（ダミー設定 > ガード: ランダム）
+（反撃設定 > ガードリバーサル: 通常投げ 3Fディレイ）
+（反撃設定 > ガードリバーサル: 何もしない）
+
+- 2LP/2LK, 2LP, 弱スピン-リンク
+  - Sマレット, 2LP/2LK, 2LP, 弱スピン-リンク, ...
+  - Sマレット(g), 前投げ
+  - Sマレット(g), 後退, {通常投げ}, MP(pc), ...
+- 2LP/2LK(g), 2LP, ガード
+
 ## 端の詐欺飛び
 
 （ダミー設定 > ガード: ランダム）
@@ -23,18 +35,6 @@
 
 弱グライド単発ヒット確認もできるので、できるなら頑張る。
 MK-HK(g), 弱グライドは4F技で割り込まれるので、ガードされた時はできればMK, 弱グライドにすると割り込まれない。
-
-## 弱攻撃のコンボ
-
-（ダミー設定 > ガード: ランダム）
-（反撃設定 > ガードリバーサル: 通常投げ 3Fディレイ）
-（反撃設定 > ガードリバーサル: 何もしない）
-
-- 2LP/2LK, 2LP, 弱スピン-リンク
-  - Sマレット, 2LP/2LK, 2LP, 弱スピン-リンク, ...
-  - Sマレット(g), 前投げ
-  - Sマレット(g), 後退, {通常投げ}, MP
-- 2LP/2LK(g), 2LP, ガード
 
 ## Sレオパードスナップを絡めた攻め
 
