--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -225,6 +225,8 @@ MKは近くないと当たらない。
 遠いとDR 2HPが当たりにくいので、2MPで妥協してもいい。
 中央ではDR 2MPの方が高いけど、端だと弱ホーン, 強昇竜が入らないのでDR 2HPの方が高い。
 
+中央のHP(pc)-HP, DR 2MP, 中スピン-Sハーベストがたまにすっぽ抜けることがあるのなんでだろう？
+
 ## 6HP
 
 - 6HP-HP-HP: 2000
