--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -306,7 +306,7 @@ MKは近くないと当たらない。
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK; 強昇竜: 3340 (最速だと3090)
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 中ホーン: 3240
 - {端} DI(pc), ステップ, 2MP, 中スピン-リンク-MK, 弱ホーン, 中昇竜: 3550
-- DI(pc), ステップ, HP-HP, DR 2HP, 強スピン, 強ホーン: 3397
+- DI(pc), ステップ, HP-HP, DR 2MP, 中スピン-リンク-MK, 中ホーン: 3460
 - {端} DI(pc), ステップ, HP-HP, DR 2HP, 中スピン-リンクMK, 弱ホーン, 強昇竜: 3649
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK, SA1, 強昇竜: 3640
 - DI(pc), ステップ, 2MP, 中スピン-リンク-MK, SA2: 4040
@@ -367,3 +367,5 @@ MK-HK, ODホーンはすっぽ抜けるので注意。
 
 2HP, 強スピンから直接ホーンSA3は行けないので、DR 2MPを挟むといい。
 HP(pc)-HP, DR 2HP, 強スピンみたいに浮いているとDR 2MPでも拾えないので、そっちは中央なら2MP、端なら2HPから中スピン-Sハーベストにするといい。
+
+体力が9割を切っていてリーサル以外ならヒーリングはほぼ出し得。
