--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -14,14 +14,19 @@
 
 ## HP-HP, ODホーン: 42
 
-## {DI(pc), ステップ, HP-HP}/{HP(pc)-HP}, DR 2HP, 強スピン, 強ホーン: 37
+## {空} DR 2HP, 強スピン, 強ホーン: 37
+
+端では中昇竜で追撃して起き攻めでいい。
 
 - ステップ, DR MK(+1), 2MP: ガードされても+6なので2MPまで割り込めない
 - ステップ, DR 2MK, MK: 端が近いので必ずホーン昇竜になる
 - ステップ, DR MP, MK
 - ステップ, 前進, 6HP: 最速でも6F遅れ
 
-端では中昇竜追撃からの攻めでいい。
+## {空} DR 2MP, 中スピン-Sハーベスト, 弱ホーン: 39
+
+6HP-HP-HPとほぼ同じ。
+強リンクが+1なので
 
 ## 6HP-HP-HP: 40
 
