--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -11,7 +11,9 @@
 
 - ステップが遅い (20F)
 - バクステが長い
-- SA1に無敵がない
+- SA1に無敵がない (対空無敵のみ)
+- OD完全無敵技がある
+- 対空無敵技がある
 
 ## ガードさせて有利になる技
 
@@ -70,3 +72,6 @@
 ただ、差し合い自体はインパクトに弱くなりがち。2MPラッシュなども見せていくとインパクトだけでは対応しづらいし、返して最大火力を出すのが大事。
 
 24戦でマスター行けた。マジでスピンからのマレットと前強に対応できてる人が少ない。
+
+ヒーリングは基礎ダメージが850下がって1300回復する。
+ヒーリングには補正が乗らない。SA2のダメージが補正で40%になっていたら340しか下がらないので基本的にはヒーリングした方がいい。
