--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -233,8 +233,12 @@ MKは近くないと当たらない。
 
 ## {空} J.MP-MP
 
-- {空} J.MP-MP, 強昇竜: 2660
-- {空} J.MP-MP, SA1, 強昇竜: 3500
+- {端} J.MP-MP, 強昇竜: 2520
+- {端} J.MP-MP, SA1, 強昇竜: 3360
+- J.MP-MP, SA2: 3640
+
+高めで足先を当てるようにすると高めに上がって追撃できる。
+状況判断が難しい。
 
 ## 強スピン(pc)
 
