--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -1,5 +1,11 @@
 ## 守り
 
+### 攻めの凌ぎ方
+
+中央でもゲージ1本の確反がバカ高いので、無敵技は避ける。むしろ投げ抜けの方がマシ。
+
+スピンから中段補正ギリがくるので、できれば止める。ガードでも投げとシミーの択が来る。
+
 ### リンクシンク対策
 
 特に注意するポイントとしては、スピンサイスからキャンセルしてくるパターン。
@@ -16,6 +22,9 @@
 
 スピードで誤魔化してるけど確反になる技が実は多い。
 しっかり見極めて確反を入れるのが大事。確反になってなくても-4にヒット確認できる7-8F技で暴れるのもいい。
+
+ラッシュ中段ガード後は遠いのでエレナのコパコパも届かない。
+6F技のMKを繋いでくるはずなので、体力があるなら4F技で暴れて喰らい逃げしてもいい。
 
 ### 確反
 
