--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -26,9 +26,9 @@
 
 （確定反撃の練習）
 
-1. HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中リンク, 後退
-2. {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜, LK, 後退
-3. {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, SA3
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, SA3
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中リンク, ガード
+- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜, LK, 後退
 
 ## 端の詐欺飛び
 
