--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -82,8 +82,12 @@ ODグライドは安定する。
 ## 2MP, CR MK
 
 - 2MP, CR MK, 2HP, 強スピン, 中ホーン: 2781
+- 2MP, CR MK, 2HP, 強スピン, DR 2MP, 強昇竜: 3005
 - {端} 2MP, CR MK, 2HP, 強スピン, 弱ホーン, 強昇竜: 3089
+- 2MP, CR MK, 2HP, 強スピン, DR 2MP, SA1, 強昇竜: 3181
+- 2MP, CR MK, 2HP, 強スピン, DR 2MP, CR 2HP, SA1, 強昇竜: 3453
 - 2MP, CR MK, 2HP, 強スピン, SA2: 3453
+- 2MP, CR MK, 2HP, 強スピン, DR 2MP, ODグライド, SA2: 3865
 - 2MP, CR MK, 2HP, 強ホーン, SA3: 4336
 - {端} 2MP, CR MK, 2HP, 強スピン, 中ホーン, SA3: 4781
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4971
