--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -1,3 +1,9 @@
+## 差し合い
+
+### 差し合いの確反
+
+6HPはガードしても確反がないけど、6HP-HPまで入れたら-11になる。
+
 ## 守り
 
 ### 攻めの凌ぎ方
@@ -14,6 +20,9 @@
 弱派生や強派生をガードするとエレナ有利なので暴れられないし、なんなら中段の方は+3から投げとシミーがあるのでそもそもガードもしてはいけない。
 
 強派生には読み合いでリスクを取って、コンボを狙う手もある。コパンで暴れるより簡単だしこっちの方がいいかも。
+
+スピンリンクにはインパクトが定石。
+まずインパクトを見せると、エレナ側も慎重になる。
 
 ### 割り込みポイント
 
