--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -125,12 +125,17 @@
 
 ## スピン-リンク: -3
 
-- リンクS-LK: ヒットしたらダウン、ガードでも+1、無敵技以外で割り込めない
-- リンクS-LK: ヒットしたら浮かしてコンボ、ガードで-4、無敵技以外で割り込めない
-- リンクS-HK: 下段や投げに勝ってパニカンしたら+8、ヒットで+4、ガードでも+3の投げ間合い
-- ガード: -3 (無敵技読み)
+- Sマレット
+- Sレオパード/Sハーベスト
+- ガード: -3 (無敵技やインパクト読み)
 
-ガードされても展開が早いと切り返しは難しいので、積極的にMKを使っても別にいい。
+まずはマレットから。
+相手が暴れても空中判定で軽く済むことが多いし。
+
+相手が小技で暴れてくるならハーベストで潰す。
+展開が早いとガードされても確反は取られにくいけど、体力が少なかったらガードされても確反がないレオパードでもいい。
+
+いずれの派生もインパクトに負けるので、インパクトしてくるならガードで読み合いしないといけない。
 
 ## 弱スピン: 34
 
