--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -41,6 +41,7 @@ MPも発生が早くて長い。
 - {立} HP: 単発ヒット確認してTC、火力が出る
 - 6HP: 単発ヒット確認してTC、とにかく長い
 - {C} HK: とにかく長い、パニカンで2HKが入る
+- レオパード: 発生23Fで6HPの倍くらい長い、ガードされて-5だが先端なら離れる
 - J.MK: めくりも狙える
 - J.HK
 
